--- a/test.json.html
+++ b/test.json.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Hello world</title><link rel="stylesheet" href="mystyle.css"></head><body style="background:black;color:white;"><h1>Hello world</h1></body></html>
+<!DOCTYPE html><html><head><title>Hello world</title><link rel="stylesheet" href="mystyle.css"></head><body style="background:black;color:white;"><h1>Hello world</h1><div style="color:grey;">Hello world</div></body></html>
